--- a/day01/02_2_데이터_전처리.ipynb
+++ b/day01/02_2_데이터_전처리.ipynb
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 계층화\n",
+    "# fish_target 갓을 계층화(stratify) 비율을 맞추서 분할\n",
     "train_input, test_input, train_target, test_target = train_test_split(fish_data, fish_target, random_state=42, stratify=fish_target)"
    ]
   },
