--- a/day04/07_2_심층신경망.ipynb
+++ b/day04/07_2_심층신경망.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
     "model.summary() \n",
     "\n",
     "# hiddenlayer(은닉층=dense1) 절편: 100개 <- 78500 = 754 * 100 + 100\n",
-    "# 출력층(=dense2) 절편: 10개 <- 1010 = 100 * 10 + 10"
+    "# output(출력층=dense2) 절편: 10개 <- 1010 = 100 * 10 + 10"
    ]
   },
   {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,24 +161,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.5637 - accuracy: 0.8090\n",
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.5592 - accuracy: 0.8109\n",
       "Epoch 2/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4103 - accuracy: 0.8522\n",
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4078 - accuracy: 0.8535\n",
       "Epoch 3/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3732 - accuracy: 0.8649\n",
+      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3732 - accuracy: 0.8655\n",
       "Epoch 4/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3502 - accuracy: 0.8740\n",
+      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3508 - accuracy: 0.8726\n",
       "Epoch 5/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3328 - accuracy: 0.8797\n"
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3331 - accuracy: 0.8800\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x257c3fc9d20>"
+       "<keras.callbacks.History at 0x1aba3d626b0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,30 +328,67 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.5292 - accuracy: 0.8133\n",
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.5249 - accuracy: 0.8139\n",
       "Epoch 2/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3923 - accuracy: 0.8590\n",
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3883 - accuracy: 0.8589\n",
       "Epoch 3/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3544 - accuracy: 0.8737\n",
+      "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3530 - accuracy: 0.8726\n",
       "Epoch 4/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3333 - accuracy: 0.8818\n",
+      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3325 - accuracy: 0.8809\n",
       "Epoch 5/5\n",
-      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3184 - accuracy: 0.8864\n"
+      "1500/1500 [==============================] - 2s 2ms/step - loss: 0.3169 - accuracy: 0.8863\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x257cd20e290>"
+       "<keras.callbacks.History at 0x1abacfec460>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.compile(loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
+    "model.fit(train_scaled, train_target, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2428 - accuracy: 0.9097\n",
+      "Epoch 2/5\n",
+      "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2381 - accuracy: 0.9110\n",
+      "Epoch 3/5\n",
+      "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2262 - accuracy: 0.9153\n",
+      "Epoch 4/5\n",
+      "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2216 - accuracy: 0.9169\n",
+      "Epoch 5/5\n",
+      "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2148 - accuracy: 0.9191\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1aba09668c0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compile(loss='sparse_categorical_crossentropy', metrics='accuracy', optimizer='adam')\n",
     "model.fit(train_scaled, train_target, epochs=5)"
    ]
   }
